# morph

./: .gitignore  Cargo.toml  README.md  run_server.sh
.github/scripts/: package.sh
.github/workflows/: build.yml
assets/: generator.rn  mesher.rn  testing.rn
assets/scripts/: blocks.rn  generator.rn  mesher.rn
scripts/: generator.rn  mesher.rn
server/: Cargo.toml
server/assets/: chunk.wgsl  test.txt
server/schema/: blocks.json  gen.json  noise.json  noises.json
server/scheme/: blocks.json
server/src/: assets.rs  chunks.rs  generate.rs  lib.rs  math.rs  mesher.rs  player.rs
server/src/chunks/: blocks.rs  config.rs  fastnoise.rs  generate.rs  mod.rs  perlin.rs
shared/: Cargo.toml
shared/src/: assets.rs  chunk.rs  lib.rs  mesh.rs
shared/src/chunk/: block.rs  mod.rs  utils.rs
src/: camera.rs  chunk.wgsl  main.cob  main.rs  networking.rs  renderer.rs  ui.rs  utils.rs
src/stdb/: asset_table.rs  block_model_type.rs  block_table.rs  block_type.rs  block_type_type.rs  chunk_schedule_table.rs  chunk_schedule_type.rs  chunk_table.rs  chunk_type.rs  create_player_reducer.rs  file_table.rs  file_type.rs  join_reducer.rs  mesh_build_schedule_type.rs  mesh_table.rs  mesh_type.rs  mesher_schedule_table.rs  mod.rs  model_type_type.rs  player_table.rs  player_type.rs  proceed_tasks_reducer.rs  run_generator_reducer.rs  run_mesher_reducer.rs  run_tick_reducer.rs  scanner_table.rs  scanner_type.rs  st_asset_type.rs  st_i_vec_3_type.rs  st_vec_3_type.rs  tasks_schedule_type.rs  tasks_table.rs  tick_reducer.rs  tick_schedule_table.rs  tick_schedule_type.rs  ticks_table.rs  ticks_type.rs
syncer/: Cargo.toml
syncer/src/: lib.rs  main.rs
syncer/src/networking/: asset_file_type.rs  assets_table.rs  chunk_data_type.rs  chunk_table.rs  edit_asset_reducer.rs  mod.rs  player_type.rs  script_asset_type.rs  scripts_table.rs  tick_reducer.rs  ticker_table.rs  ticker_type.rs
