[package]
name = "morph"
version = "0.0.1"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies.bevy]
version = "0.16.*"
default-features = false
features = [
    "bevy_core_pipeline",
    "multi_threaded",
    "async_executor",
    "default_font",
    "bevy_render",
    "bevy_window",
    "bevy_image",
    "bevy_state",
    "bevy_color",
    "bevy_asset",
    "bevy_text",
    "serialize",
    "bevy_log",
    "bevy_ui",
    "std",
    "x11",
    "png",
]

[dependencies]
bevy_cobweb_ui = { version = "0.21.1", features = ["hot_reload"] }
spacetimedb-sdk = "1.3.0"
bevy_spacetimedb = "1.0"
bevy_cobweb = "0.17.2"
