[package]
name = "morph"
version = "0.0.1"
edition = "2024"

[workspace]
resolver = "3"
members = ["server", "shared", "syncer"]

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    "bevy_core_pipeline",
    "multi_threaded",
    "async_executor",
    "default_font",
    "file_watcher",
    "bevy_render",
    "bevy_window",
    "bevy_image",
    "bevy_state",
    "bevy_color",
    "bevy_asset",
    "bevy_text",
    "serialize",
    "bevy_log",
    "std",
]

[dependencies]
syncer = { path = "./syncer" }
shared = { path = "./shared" }