[package]
name = "spacetime-module"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "1.3.0", features = ["unstable"] }
include_directory = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2.0"
bevy_math = "*"
log = "0.4"
