[package]
name = "spacetime-module"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "1.3.0", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
include_directory = "*"
serde_json = "1"
bevy_math = "0.16.*"
log = "0.4"
